Add health check test for ac test project
