# NotificationApi/NotificationApi/Controllers/HealthCheckController.cs
@@ -1,9 +1,13 @@
 using System;
 using System.Net;
 using System.Reflection;
+using System.Threading.Tasks;
 using Microsoft.AspNetCore.Authorization;
 using Microsoft.AspNetCore.Mvc;
 using NotificationApi.Contract.Responses;
+using NotificationApi.DAL.Models;
+using NotificationApi.DAL.Queries;
+using NotificationApi.DAL.Queries.Core;
 using NSwag.Annotations;
 
 namespace NotificationApi.Controllers
@@ -14,6 +18,11 @@ namespace NotificationApi.Controllers
     [ApiController]
     public class HealthCheckController : ControllerBase
     {
+        private readonly IQueryHandler _queryHandler;
+        public HealthCheckController(IQueryHandler queryHandler)
+        {
+            _queryHandler = queryHandler;
+        }
         /// <summary>
         ///     Check Service Health
         /// </summary>
@@ -22,10 +31,22 @@ namespace NotificationApi.Controllers
         [OpenApiOperation("CheckServiceHealthAuth")]
         [ProducesResponseType(typeof(HealthResponse), (int) HttpStatusCode.OK)]
         [ProducesResponseType(typeof(HealthResponse), (int) HttpStatusCode.InternalServerError)]
-        public IActionResult HealthAsync()
+        public async Task<IActionResult> HealthAsync()
         {
-            var response = new HealthResponse {Version = GetApplicationVersion()};
-            return Ok(response);
+            var response = new HealthResponse {AppVersion = GetApplicationVersion()};
+            try
+            {
+                var result = await _queryHandler.Handle<DbHealthCheckQuery, DbHealthCheckResult>(new DbHealthCheckQuery());
+                response.DatabaseHealth.Successful = result.CanConnect;
+            }
+            catch (Exception ex)
+            {
+                response.DatabaseHealth.Successful = false;
+                response.DatabaseHealth.ErrorMessage = ex.Message;
+                response.DatabaseHealth.Data = ex.Data;
+            }
+            
+            return !response.DatabaseHealth.Successful ? StatusCode((int)HttpStatusCode.InternalServerError, response) : Ok(response);
         }
 
         private static AppVersionResponse GetApplicationVersion()
@@ -36,6 +57,7 @@ namespace NotificationApi.Controllers
                 InformationVersion =
                     GetExecutingAssemblyAttribute<AssemblyInformationalVersionAttribute>(a => a.InformationalVersion)
             };
+            
             return applicationVersion;
         }
 
